// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectable custom options with data 1`] = `
<div
  class="euiSelectable"
>
  <p
    class="euiScreenReaderOnly"
    id="generated-id_instructions"
  >
    Filter options
  </p>
  <div
    class="euiSelectableList"
    data-test-subj="euiSelectableList"
  >
    <div
      data-eui="EuiAutoSizer"
    >
      <div
        class="euiSelectableList__list"
        style="position:relative;height:96px;width:600px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
      >
        <ul
          style="height:96px;width:100%"
        >
          <li
            aria-checked="false"
            aria-posinset="1"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            data-test-selected="false"
            id="generated-id_listbox_option-0"
            role="option"
            style="position:absolute;left:0;top:0;height:32px;width:100%"
            title="Titan"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  VI: Titan
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="2"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            data-test-selected="false"
            id="generated-id_listbox_option-1"
            role="option"
            style="position:absolute;left:0;top:32px;height:32px;width:100%"
            title="Enceladus"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  II: Enceladus
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="3"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            data-test-selected="false"
            id="generated-id_listbox_option-2"
            role="option"
            style="position:absolute;left:0;top:64px;height:32px;width:100%"
            title="Pandora is one of Saturn's moons, named for a Titaness of Greek mythology"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  XVII: Pandora is one of Saturn's moons, named for a Titaness of Greek mythology
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable errorMessage prop can render an element as the message 1`] = `
<div
  class="euiSelectable"
>
  <p
    class="euiScreenReaderOnly"
    id="generated-id_instructions"
  >
    Filter options
  </p>
  <div
    class="euiText euiText--extraSmall euiSelectableMessage"
    data-test-subj="euiSelectableMessage"
    id="generated-id_messageContent"
  >
    <div
      class="euiTextColor euiTextColor--subdued"
    >
      <span>
        Element error!
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable errorMessage prop does not render the message when not defined 1`] = `
<div
  class="euiSelectable"
>
  <p
    class="euiScreenReaderOnly"
    id="generated-id_instructions"
  >
    Filter options
  </p>
  <div
    class="euiSelectableList"
    data-test-subj="euiSelectableList"
  >
    <div
      data-eui="EuiAutoSizer"
    >
      <div
        class="euiSelectableList__list"
        style="position:relative;height:96px;width:600px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
      >
        <ul
          style="height:96px;width:100%"
        >
          <li
            aria-checked="false"
            aria-posinset="1"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            data-test-selected="false"
            data-test-subj="titanOption"
            id="generated-id_listbox_option-0"
            role="option"
            style="position:absolute;left:0;top:0;height:32px;width:100%"
            title="Titan"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  Titan
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="2"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            data-test-selected="false"
            id="generated-id_listbox_option-1"
            role="option"
            style="position:absolute;left:0;top:32px;height:32px;width:100%"
            title="Enceladus"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  Enceladus
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="3"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            data-test-selected="false"
            id="generated-id_listbox_option-2"
            role="option"
            style="position:absolute;left:0;top:64px;height:32px;width:100%"
            title="Pandora is one of Saturn's moons, named for a Titaness of Greek mythology"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
              >
                <span>
                  Pandora is one of Saturn's moons, named for a Titaness of Greek mythology
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable errorMessage prop does renders the message when defined 1`] = `
<div
  class="euiSelectable"
>
  <p
    class="euiScreenReaderOnly"
    id="generated-id_instructions"
  >
    Filter options
  </p>
  <div
    class="euiText euiText--extraSmall euiSelectableMessage"
    data-test-subj="euiSelectableMessage"
    id="generated-id_messageContent"
  >
    <div
      class="euiTextColor euiTextColor--subdued"
    >
      <p>
        Error!
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable is rendered 1`] = `
<div
  class="euiSelectable testClass1 testClass2"
  data-test-subj="test subject string"
  id="testId"
/>
`;

exports[`EuiSelectable props allowExclusions 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props height can be forced 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props height can be full 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
/>
`;

exports[`EuiSelectable props isLoading 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props listProps 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props renderOption 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props searchable 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props singleSelection 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable search value supports inheriting initialSearchValue from searchProps.defaultValue 1`] = `
<div
  class="euiSelectable"
>
  <div
    class="euiScreenReaderOnly"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      role="status"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      role="status"
    >
      <p>
        <strong>
          default value
        </strong>
         doesn't match any options
      </p>
    </div>
  </div>
  <p
    class="euiScreenReaderOnly"
    id="generated-id_instructions"
  >
    Filter options
  </p>
  <div
    class="euiText euiText--extraSmall euiSelectableMessage"
    data-test-subj="euiSelectableMessage"
    id="generated-id_messageContent"
  >
    <div
      class="euiTextColor euiTextColor--subdued"
    >
      <p>
        <strong>
          default value
        </strong>
         doesn't match any options
      </p>
    </div>
  </div>
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-activedescendant=""
        aria-haspopup="listbox"
        aria-label="Filter options"
        autocomplete="off"
        class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch-isClearable euiSelectableSearch"
        data-test-subj="searchInput"
        placeholder="Filter options"
        type="search"
        value="default value"
      />
      <div
        class="euiFormControlLayoutIcons"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="search"
          />
        </span>
      </div>
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <button
          aria-label="Clear input"
          class="euiFormControlLayoutClearButton"
          data-test-subj="clearSearchButton"
          type="button"
        >
          <span
            class="euiFormControlLayoutClearButton__icon"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable should not reset the activeOptionIndex nor isFocused when EuiSelectable is blurred in favour of its popover 1`] = `
Object {
  "activeOptionIndex": 0,
  "isFocused": true,
  "searchValue": "",
  "visibleOptions": Array [
    Object {
      "data-test-subj": "titanOption",
      "label": "Titan",
    },
    Object {
      "label": "Enceladus",
    },
    Object {
      "label": "Pandora is one of Saturn's moons, named for a Titaness of Greek mythology",
    },
  ],
}
`;

exports[`EuiSelectable should not reset the activeOptionIndex nor isFocused when EuiSelectable is blurred in favour of its popover 2`] = `
Object {
  "activeOptionIndex": 0,
  "isFocused": true,
  "searchValue": "",
  "visibleOptions": Array [
    Object {
      "data-test-subj": "titanOption",
      "label": "Titan",
    },
    Object {
      "label": "Enceladus",
    },
    Object {
      "label": "Pandora is one of Saturn's moons, named for a Titaness of Greek mythology",
    },
  ],
}
`;
